# gita-query

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  OLLAMA_SUPABASE_SETUP.md  README.md  api.py  app.py  app_ollama.py  check_environment.py  debug_dataset.py  demo.py  pyproject.toml  quick_test.py  requirements.txt  requirements_ollama.txt  supabase_schema.sql  test_chatbot.py  test_installation.py
.streamlit/: secrets.toml.example
eval/: __init__.py  eval.py
rag/: __init__.py  answer.py  indexer.py  ollama_answerer.py  ollama_client.py  retriever.py  supabase_retriever.py  utils.py
