[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gita-chatbot"
version = "1.0.0"
description = "A chatbot that answers life skills questions using the wisdom of the Bhagavad Gita"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "streamlit>=1.28.0",
    "datasets>=2.14.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.5.0,<2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=1.11.0",
    "transformers>=4.30.0",
    "google-generativeai>=0.3.0",
    "openai>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
